Version v1.0.1: Inventory bug fix